syntax = "proto3";

package proto;

option go_package = "github.com/RicardoCenci/iot-distributed-architecture/shared/proto";

message MetricsData {
  string sensor_id = 1;
  float cpu_usage = 2;
  float memory_usage = 3;
  float disk_usage = 4;
  float network_usage = 5;
  int64 timestamp = 6;
}

